@@ -15,7 +15,6 @@ import java.util.List;
 import java.util.UUID;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import jakarta.annotation.PostConstruct;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -79,7 +78,7 @@ public class JwtTokenAuthenticationFilter extends OncePerRequestFilter {
         }
 
         List<String> filters = List.of(uriFilters.split(",")).stream()
-                .filter(StringUtils::isNotBlank).collect(Collectors.toList());
+                .filter(StringUtils::isNotBlank).toList();
 
         if (filters.isEmpty()) {
             log.warn("all filters provided are empty so all api requests will be logged");
@@ -91,7 +90,7 @@ public class JwtTokenAuthenticationFilter extends OncePerRequestFilter {
         List<Predicate<String>> compiledFilters = filters.stream()
                 .filter(StringUtils::isNotBlank)
                 .map(Pattern::compile).map(Pattern::asPredicate)
-                .collect(Collectors.toList());
+                .toList();
 
         // Reduce filters to single predicate statement
         uriFilter = compiledFilters.stream().reduce(Predicate::or).orElse(uri -> false).negate();
