@@ -16,7 +16,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Isolation;
@@ -53,6 +52,11 @@ public class JobPreProcessorImpl implements JobPreProcessor {
         this.coverageDriver = coverageDriver;
     }
 
+    void logAndAlertFailure(Job job, String reason) {
+        String message = String.format("%s Job %s %s", EOB_JOB_FAILURE, job.getJobUuid(), reason);
+        eventLogger.logAndAlert(job.buildJobStatusChangeEvent(FAILED, message), PUBLIC_LIST);
+    }
+
     @Override
     @Transactional(propagation = Propagation.REQUIRES_NEW, isolation = Isolation.SERIALIZABLE)
     public Job preprocess(String jobUuid) {
@@ -73,8 +77,7 @@ public class JobPreProcessorImpl implements JobPreProcessor {
         if (job.getFhirVersion() == FhirVersion.STU3 && job.getUntil() != null) {
             log.warn("JobPreProcessorImpl > preprocess: job FAILED because the _until parameter is only available with version 2 and version 3 of the API");
 
-            eventLogger.logAndAlert(job.buildJobStatusChangeEvent(FAILED, EOB_JOB_FAILURE + " Job " + jobUuid
-                    + "failed because the _until parameter is only available with version 2 and version 3 of the API"), PUBLIC_LIST);
+            logAndAlertFailure(job, "failed because the _until parameter is only available with version 2 and version 3 of the API");
 
             job.setStatus(FAILED);
             job.setStatusMessage("failed because the _until parameter is only available with version 2 and version 3 of the API.");
@@ -87,8 +90,7 @@ public class JobPreProcessorImpl implements JobPreProcessor {
                 && job.getUntil().toInstant().isBefore(job.getSince().toInstant())) {
             log.warn("JobPreProcessorImpl > preprocess: job FAILED because the _until is before _since.");
 
-            eventLogger.logAndAlert(job.buildJobStatusChangeEvent(FAILED, EOB_JOB_FAILURE + " Job " + jobUuid
-                    + "failed because the _until is before _since."), PUBLIC_LIST);
+            logAndAlertFailure(job, "failed because the _until is before _since.");
 
             job.setStatus(FAILED);
             job.setStatusMessage("failed because the _until is before _since.");
@@ -105,8 +107,7 @@ public class JobPreProcessorImpl implements JobPreProcessor {
         if (contract.getAttestedOn() == null) {
             log.warn("JobPreProcessorImpl > preprocess: job FAILED because the contract attestation date is null.");
 
-            eventLogger.logAndAlert(job.buildJobStatusChangeEvent(FAILED, EOB_JOB_FAILURE + " Job " + jobUuid
-                + "failed for contract: " + contract.getContractNumber() + " because contract attestation date is null"), PUBLIC_LIST);
+            logAndAlertFailure(job, "failed for contract: " + contract.getContractNumber() + " because contract attestation date is null");
 
             job.setStatus(FAILED);
             job.setStatusMessage("failed because contract attestation date is null.");
@@ -152,7 +153,8 @@ public class JobPreProcessorImpl implements JobPreProcessor {
 
             job = jobRepository.save(job);
         } catch (InterruptedException ie) {
-            throw new RuntimeException("could not determine whether coverage metadata was up to date", ie);
+            Thread.currentThread().interrupt();
+            throw new JobProcessingException("could not determine whether coverage metadata was up to date", ie);
         }
 
         return job;
@@ -212,7 +214,7 @@ public class JobPreProcessorImpl implements JobPreProcessor {
         List<Job> sortedFilteredlist = successfulJobs.stream()
                 .filter(j -> downloadedAll(j.getJobOutputs()))
                 .sorted(comparator)
-                .collect(Collectors.toList());
+                .toList();
 
         if (sortedFilteredlist.isEmpty()) {
             return Optional.empty();
